/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package java.apphosting;

option java_package = "com.google.apphosting.base.protos";
option java_outer_classname = "SystemServicePb";

message SystemServiceError {
  enum ErrorCode {
    // Not an error.
    OK = 0;

    // Unexpected internal error.
    INTERNAL_ERROR = 1;

    // The specified request can only be run from a backend instance.
    BACKEND_REQUIRED = 2;

    // Limit on the number of active background requests reached for this app
    // version.
    LIMIT_REACHED = 3;
  }
}

message StartBackgroundRequestRequest {}

message StartBackgroundRequestResponse {
  // Every /_ah/background request will have an X-AppEngine-BackgroundRequest
  // header, whose value will be equal to this parameter, the request_id.
  optional string request_id = 1;
}
